--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
+youtube_dl = "0.8.1"
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
