--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
+futures = "0.3.28"
+tokio = { version = "1", features = ["full"] }
+youtube_dl = { version = "0.8.1", features = ["tokio"] }
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
