--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
+crossbeam = "0.8.0"
+num_cpus = "1.15.0"
 futures = "0.3.28"
 tokio = { version = "1", features = ["full"] }
 youtube_dl = { version = "0.8.1", features = ["tokio"] }
